@@ -200,6 +200,9 @@ Changes include:
   RISC OS: implement SDL_WM_IconifyWindow()
 </P>
 <P>
+  RISC OS: send SDL_APPACTIVE events when iconizing the window.
+</P>
+<P>
   Configuration: fix library detection selecting wrong lib (bug <a href="https://bugzilla.libsdl.org/show_bug.cgi?id=2795">2795</a>.)
 </P>
 <P>
