@@ -81,6 +81,7 @@ Changes include:
   is in focus. don't reset mouse focus when recreating the window.
 - RISC OS: support Windows and Menu key input.
 - RISC OS: implement SDL_WM_IconifyWindow()
+- RISC OS: send SDL_APPACTIVE events when iconizing the window.
 - Configuration: fix library detection selecting wrong lib (bug 2795.)
 - Configuration: fix detecting dynamic library support on powerpc64le
   (bug 3481.)
